Fix scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  position: fixed;
   left: 0;
   right: 0;
   z-index: 9999;
